--- a/source/style/widget-post-list.scss
+++ b/source/style/widget-post-list.scss
@@ -16,9 +16,14 @@ $coverBlurEffect: 20px;
     > header {
       overflow: hidden;
 
+      // fix composite layer border on safari browser
+      z-index: 1;
+      border-top-left-radius: $borderRadius;
+      border-top-right-radius: $borderRadius;
+
       .post-cover-backdrop {
         position: absolute;
-        z-index: 0;
+        z-index: 1;
         width: 100%;
 
         img {
@@ -33,12 +38,12 @@ $coverBlurEffect: 20px;
 
       .post-cover-link {
         position: relative;
-        z-index: 1;
+        z-index: 2;
+
+        width: 100%;
 
         // fix white spacer
         font-size: 0;
-
-        width: 100%;
       }
 
       .post-cover-img {
